[project]
name = "koreo-controller"
version = "0.1.13"
description = "Koreo Controller runs Koreo Core as a Kubernetes Controller."
authors = [
    {name = "Eric Larssen", email = "eric.larssen@realkinetic.com"},
    {name = "Robert Kluin", email = "robert.kluin@realkinetic.com"},
]
dependencies = [
    "koreo-core==0.1.10",
    "cel-python==0.2.0",
    "kr8s==0.20.6",
    "uvloop==0.21.0",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "Apache-2.0"}

[tool.pdm]
distribution = false

[dependency-groups]
test = [
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
]
tooling = [
    "ruff==0.11.2",
    "pyright==1.1.397",
]
all = ["koreo-core[test,tooling]"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
  "-v",
  "--import-mode=importlib",
  "--cov=src",
  "--cov-branch",
  "--cov-report=term-missing",
]
